[package]
name = "matrix-visualisations-backend"
version = "0.1.0"
authors = ["Eisha Chen-yen-su <chenyensu0@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
awc = "0.2.2"
base64 = "0.10.1"
futures = "0.1"
futures-cpupool = "0.1"
percent-encoding = "1.0.1"
r2d2 = "0.8"
r2d2_postgres = "0.14"
serde = "1"
serde_derive = "1"
serde_json = { version = "1", features = ["raw_value"] }
sodiumoxide = "0.2.2"

[dependencies.indolentjson]
git = "https://github.com/NegativeMjark/indolentjson-rust.git"
